<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
       >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/weight_settings"
            android:textColor="@color/start_blue"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="1"
        android:id="@+id/view_dob">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:text="@string/date_of_birth" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".7"
            android:background="@color/white"
            android:gravity="start|center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="1"
        android:id="@+id/view_height">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:text="@string/user_height" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".7"
            android:inputType="numberDecimal"
            android:background="@color/white"
            android:gravity="start|center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:text="@string/dci_value" />

        <EditText
            android:id="@+id/et_dci"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".7"
            android:background="@color/white"
            android:gravity="start|center_vertical" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rel_stride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bottom_border"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_user_stride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/weight_unit" />



            <LinearLayout
                android:id="@+id/ll_stride_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
              android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/stride_greater"
                    android:gravity="center" />

            </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bottom_border"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_gender" />



        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/stride_greater"
                android:gravity="center" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:id="@+id/bt_set"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/set"/>
</LinearLayout>