<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omronhealthcare.OmronConnectivitySample.Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottom_border">

        <ImageView
            android:id="@+id/iv_add_device"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_action_add"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_reminder"
            android:textColor="@color/omron_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_remove_saved_devices"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:visibility="invisible"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_top"
        android:layout_below="@+id/top_bar"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_time_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_time_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/time_format" />

            <Switch
                android:id="@+id/sw_time_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textOff="@string/time_format_12"
                android:textOn="@string/time_format_24" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_saved_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_time_format" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_start_selector"
            android:text="@string/update"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>
