<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omronhealthcare.OmronConnectivitySample.Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottom_border">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/pair_amp_transfer"
            android:textColor="@color/omron_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_vital_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@drawable/ic_folder_open" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_top"
        android:layout_below="@+id/top_bar"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_device_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@color/omron_blue"
            android:gravity="center"
            android:padding="5dp"
            android:text="Omron Devices"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/lv_scannedlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_device_list" />

        <ProgressBar
            android:id="@+id/pb_scan"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_start_selector"
            android:text="Scan"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_start_selector"
            android:text="@string/transfer"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_transfer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top_bar"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d3d3d3">

            <!--timestamp-->

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/omron_blue"
                android:padding="5dp"
                android:text="@string/oxygen_saturation"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/lyt_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabel"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_timeStamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/time_stamp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_timestamp_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/hypen"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!--SpO2 -->
            <LinearLayout
                android:id="@+id/lyt_spo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_timestamp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_spo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/spo2"

                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_spo2_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/hypen"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Pulse Rate -->
            <LinearLayout
                android:id="@+id/lyt_pulserate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_spo2"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_pulserate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pulse_rate"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_pulserate_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hypen"
                    android:textColor="@color/black" />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/ll_device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:background="@color/omron_blue"
            android:padding="5dp">

            <TextView
                android:id="@+id/device_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/omron_blue"
                android:padding="4dp"
                android:text="@string/device_information"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_device_info"
            android:layout_centerHorizontal="true"
            android:background="#d3d3d3">

            <LinearLayout
                android:id="@+id/lyt_deviceinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:weightSum="1">


                <TextView
                    android:id="@+id/tv_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_device_uuid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/black" />


            </LinearLayout>
            <!--status -->
            <LinearLayout
                android:id="@+id/lyt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_deviceinfo"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/status"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/hypen"
                    android:textColor="@color/black" />
            </LinearLayout>
            <!--status -->
            <LinearLayout
                android:id="@+id/lyt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_status"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/Error"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_error_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/hypen"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_error_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_error"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
